--- a/HomeWork_JS/index.html
+++ b/HomeWork_JS/index.html
@@ -81,9 +81,9 @@
     <script src="lesson-05/01.js" type="module"></script>
     <script src="lesson-05/02.js" type="module"></script>
     <script src="lesson-06/01.js" type="module"></script>
-<!--    <script src="lesson-07/01.js" type="module"></script>-->
-<!--    <script src="lesson-07/02.js" type="module"></script>-->
-<!--    <script src="lesson-07/03.js" type="module"></script>-->
+    <script src="lesson-07/01.js" type="module"></script>
+    <script src="lesson-07/02.js" type="module"></script>
+    <script src="lesson-07/03.js" type="module"></script>
 <!--    <script src="lesson-08/01.js" type="module"></script>-->
 <!--    <script src="lesson-08/02.js" type="module"></script>-->
 <!--    <script src="lesson-09/01.js" type="module"></script>-->
